@@ -8,8 +8,10 @@ import org.junit.BeforeClass;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.jdbc.datasource.SimpleDriverDataSource;
+import org.springside.examples.showcase.ShowcaseServer;
 import org.springside.modules.test.data.DataFixtures;
 import org.springside.modules.test.jetty.JettyFactory;
+import org.springside.modules.test.spring.Profiles;
 import org.springside.modules.utils.PropertiesLoader;
 
 /**
@@ -32,7 +34,10 @@ public class BaseFunctionalTestCase {
 	private static Logger logger = LoggerFactory.getLogger(BaseFunctionalTestCase.class);
 
 	@BeforeClass
-	public static void beforeClass() throws Exception {
+	public static void initFunctionalTestEnv() throws Exception {
+
+		System.out.println("[HINT] Don't forget to set -XX:MaxPermSize=128m");
+
 		baseUrl = propertiesLoader.getProperty("baseUrl");
 
 		Boolean isEmbedded = new URL(baseUrl).getHost().equals("localhost")
@@ -51,8 +56,8 @@ public class BaseFunctionalTestCase {
 	 */
 	protected static void startJettyOnce() throws Exception {
 		if (jettyServer == null) {
-			//设定Spring的profile
-			System.setProperty("spring.profiles.active", "functional");
+			// 设定Spring的profile
+			Profiles.setProfileAsSystemProperty(Profiles.FUNCTIONAL_TEST);
 
 			jettyServer = JettyFactory.createServerInSource(new URL(baseUrl).getPort(), ShowcaseServer.CONTEXT);
 			JettyFactory.setTldJarNames(jettyServer, ShowcaseServer.TLD_JAR_NAMES);
